<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/addtext"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/add_card"
        android:textColor="@color/white"
        android:hint="Reminder"
        android:textColorHint="#696969"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg"
        android:layout_below="@+id/addtext"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Date"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="launchDate"/>

    <TextView
        android:id="@+id/datetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addtext"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="Date"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg"
        android:layout_below="@+id/button1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Time"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="launchTime"/>

    <TextView
        android:id="@+id/timetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="Time"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Location"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/locationtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="Location"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:text="Cancel"
        android:background="@color/transparent"
        android:textColor="@color/white"
        android:onClick="launchDetail"/>

    <Button
        android:id="@+id/savebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:text="Update"
        android:onClick="updateReminder"
        android:background="@color/transparent"
        android:textColor="@color/white"/>


</RelativeLayout>