...
            android:background="@color/transparent"
            android:src="@drawable/ic_calendar"
            android:onClick="openCalendar"/>
    </android.widget.Toolbar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/cardStop"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="launchAdd"/>

    <ListView
        android:id="@+id/homeItems"
        android:longClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@drawable/home_cards"
        android:descendantFocusability="afterDescendants"/>
...
