...
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintTop_toTopOf="parent" />
    </android.widget.Toolbar>

    <TextView
        android:id="@+id/reminderdtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text=""
...
